# xelf

./: .gitignore  Cargo.toml  LICENSE  as_is2  build.rs  cr  linker.ld  x86_64-unknown-none.json
crates/result/: Cargo.toml
crates/result/src/: lib.rs
draft/: -_draft_a_macros.rs  -_draft_elf_macros-rs  Cargo.toml  a  build.rs  cmp.sh  lib.rs  macros.rs  main.rs  stack  x86_64-unknown-none.json
draft/dev/: rust_elf_header_loader.tar.xz
draft/dev/.scripts copy/: a01_map2identifier_2.rs
draft/dev/.scripts copy/.ipynb_checkpoints/: a-checkpoint.rs
draft/dev/cola/: elf.rs
draft/dev/cola/script/: a01_enum_discriminant.rs  a02_slices.rs  b01_sections.rs
draft/dev/elf_loader/: .gitignore  Cargo.toml
draft/dev/elf_loader.2/: Cargo.toml  rust-analyzer.toml  rust_elf_header_loader.tar.xz
draft/dev/elf_loader.2/lib/: Cargo.toml
draft/dev/elf_loader.2/lib/src/: lib.rs
draft/dev/elf_loader.2/lib/src/arch32/: data.rs  mod.rs
draft/dev/elf_loader.2/lib/src/arch64/: data.rs
draft/dev/elf_loader.2/src/: main.rs
draft/dev/elf_loader/data/: main_sta
draft/dev/elf_loader/data/src/main/: main.c
draft/dev/elf_loader/lib/: Cargo.toml
draft/dev/elf_loader/src/: main.rs
draft/dev/elf_loader_2024_12_25/: tno
draft/dev/elf_loader_2024_12_25/data/: main_static
draft/dev/elf_loader_2024_12_25/lib/src/: lib.rs
draft/dev/elf_loader_2024_12_25/src/: main.rs
draft/dev/raw/: usr_bin_file_info
draft/dev/raw/elf_loader_64bits/: Cargo.toml
draft/dev/raw/elf_loader_64bits/lib/: Cargo.toml
draft/dev/raw/elf_loader_64bits/scripts/: a01_map2identifier.rs  a01_map2identifier_2.rs
draft/dev/raw/elf_loader_64bits/src/: main.rs
draft/dev/raw/elf_loader_multiarch/src/: main.rs
draft/dev/raw/elf_reader/: Cargo.toml
draft/dev/raw/elf_reader/src/: main.rs
draft/dev/raw/hello_32_64/: Cargo.toml  build.sh
draft/dev/teste/: Cargo.toml
draft/elf/: dtype.rs  error.rs  header.rs  program.rs
draft/elf/header/: etype.rs  identifier.rs  machine.rs  version.rs
draft/elf/header/identifier/: abi_version.rs  class.rs  data.rs  magic.rs  os_abi.rs  version.rs
draft/elf/program/: header.rs
draft/elf_loader/crates/elf/: Cargo.toml
draft/elf_loader/crates/elf/src/: lib copy.rs  lib.rs  page.rs
draft/elf_loader/crates/x86_64/src/: lib.rs  memory.rs  print.rs
draft/src/: arch.rs  error.rs  human.rs  lib.rs  main.rs  start.s
draft/src/human/: error.rs  stdout.rs
draft/src/syscall/open/: flags.rs
draft/x86_64/src/: lib.rs  syscall.rs
draft/x86_64/src/syscall/: syscall1.rs  syscall3.rs  syscall4.rs
(+273 files in other folders)
