[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
# print = { path = "crates/print" }

[workspace]
# members = ["crates/print"]

[lib]
name = "xelf"
path = "src/lib.rs"
test = false

[[bin]]
name = "xelf"
path = "src/main.rs"
test = false

[profile.release]
# codegen-units = 1
# opt-level = "s"
# debug = false
# incremental = false
# overflow-checks = false

[build-dependencies]
cc = "1.0"
