[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
arch = { path = "crates/arch" }
human = { path = "crates/human" }
syscall = { path = "crates/syscall" }
result = { path = "crates/result" }

[workspace]
members = [
    "crates/arch",
    "crates/human",
    "crates/result",
    "crates/syscall",
    "crates/x86_64",
]

[lib]
name = "xelf"
path = "src/lib.rs"
test = false

[[bin]]
name = "xelf"
path = "src/main.rs"
test = false

[profile.release]
# codegen-units = 1
# opt-level = "s"
# debug = false
# incremental = false
# overflow-checks = false

[build-dependencies]
cc = "1.0"
