[package]
name = "xelf"
version = "0.1.0"
edition = "2024"

[dependencies]
x86_64 = { path = "crates/x86_64" }
# ufmt = "0.2.0"

[workspace]
members = ["crates/x86_64"]

[lib]
name = "xelf"
path = "src/lib.rs" # Optional if you want to also expose functionality as a library
test = false

[[bin]]
name = "xelf"
path = "src/main.rs"
test = false         # This prevents compilation with std for testing

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
debug = true
opt-level = 1

[build-dependencies]
cc = "1.0"
